objects/PercentageDelta__c.object
<CustomObject>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Italy</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PercentageDelta__c</fullName>
        <label>%Delta (RR/GG)</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Hierarchy</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Record does not exist or is not a hierarchy</errorMessage>
            <filterItems>
                <field>Product2.APTS_LP_Is_Hierarchy__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>$User.Default_LSO__c</field>
                <operation>contains</operation>
                <valueField>Product2.APTS_LP_Sales_Organization__c</valueField>
            </filterItems>
            <filterItems>
                <field>Product2.APTS_Hierarchy_Level__c</field>
                <operation>equals</operation>
                <value>4</value>
            </filterItems>
            <infoMessage>Search results limited to hierarchies</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>%Delta</relationshipLabel>
        <relationshipName>Delta</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Validity_Date__c</fullName>
        <inlineHelpText>can be left empty or filled with a date in the future. entries with dates in the past will be excluded from calculations</inlineHelpText>
        <label>Valid Until</label>
        <type>Date</type>
    </fields>
    <label>%Delta</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>PercentageDelta__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>B-{0000}</displayFormat>
        <label>Band</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>%Delta</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Hierarchy_set</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c), 
NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c), 
ISBLANK(Product__c))</errorConditionFormula>
        <errorDisplayField>Product__c</errorDisplayField>
        <errorMessage>Hierarchy must be selected</errorMessage>
    </validationRules>
</CustomObject>